--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
+    "export": "echo 'Next.js 15 handles export via next build with output: export'",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
